prusti-tests/tests/parse/ui/wrong_args.stderr
error: unexpected token
 --> $DIR/wrong_args.rs:3:17
  |
3 | #[requires("too", "many", "args")]
  |                 ^

error: aborting due to previous error

