prusti-tests/tests/parse/ui/wrong_args.rs
use prusti_contracts::*;

#[requires("too", "many", "args")]
fn too_many_args() {}

fn main() {}
